<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:cardCornerRadius="64dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_profile">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_back" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/profile"
        android:textColor="@color/secondary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:padding="16dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@id/tv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_profile" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/image_profile"
        android:layout_height="@dimen/image_profile"
        android:layout_marginTop="32dp"
        android:src="@drawable/pp_iuran"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile"

        />

    <!--    Nama lengkap-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/address_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:hint="@string/hint_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Nomor rumah-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bloc_layout"
        app:layout_constraintEnd_toEndOf="@id/name_layout"
        app:layout_constraintStart_toStartOf="@id/name_layout"
        app:layout_constraintTop_toBottomOf="@+id/name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:hint="@string/hint_address" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Bloc rumah-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bloc_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/handphone_layout"
        app:layout_constraintEnd_toEndOf="@id/address_layout"
        app:layout_constraintStart_toStartOf="@id/address_layout"
        app:layout_constraintTop_toBottomOf="@+id/address_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bloc_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:hint="@string/hint_bloc" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Nomor Handphone-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/handphone_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/email_layout"
        app:layout_constraintEnd_toEndOf="@id/bloc_layout"
        app:layout_constraintStart_toStartOf="@id/bloc_layout"
        app:layout_constraintTop_toBottomOf="@+id/bloc_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/handphone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:hint="@string/hint_handphone" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/handphone_layout"
        app:layout_constraintStart_toStartOf="@id/handphone_layout"
        app:layout_constraintTop_toBottomOf="@+id/handphone_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>