<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="@dimen/profile_home"
                android:layout_height="@dimen/profile_home"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/pp_iuran"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_selamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:elevation="3dp"
                android:gravity="center"
                android:text="@string/selamat_pagi"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/iv_profile"
                app:layout_constraintTop_toTopOf="@id/iv_profile"


                />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="3dp"
                android:gravity="center"
                android:text="@string/dummy_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_selamat"
                app:layout_constraintTop_toBottomOf="@+id/tv_selamat" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_iuran_keamanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/primary"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@id/card_iuran_sampah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/width_card"
                android:layout_height="@dimen/height_card"
                android:background="@color/primary"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingTop="32dp"
                android:paddingEnd="16dp"
                android:paddingBottom="32dp"
                android:text="@string/iuran_keamanan"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_iuran_sampah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/card_iuran_keamanan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card_iuran_keamanan"
        app:layout_constraintTop_toTopOf="@id/card_iuran_keamanan">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/width_card"
                android:layout_height="@dimen/height_card"
                android:background="@color/primary"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingTop="32dp"
                android:paddingEnd="16dp"
                android:paddingBottom="32dp"
                android:text="@string/iuran_sampah"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_uang_kas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/primary"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@id/card_transaksi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_iuran_keamanan">

        <TextView
            android:layout_width="@dimen/width_card"
            android:layout_height="@dimen/height_card"
            android:background="@color/primary"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingTop="32dp"
            android:paddingEnd="16dp"
            android:paddingBottom="32dp"
            android:text="@string/uang_kas"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_transaksi"
        android:layout_width="@dimen/width_card"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/card_uang_kas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card_uang_kas"
        app:layout_constraintTop_toTopOf="@id/card_uang_kas"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_riwayat_transaksi"
                android:layout_width="@dimen/width_card"
                android:layout_height="@dimen/height_card"
                android:background="@color/primary"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingTop="32dp"
                android:paddingEnd="16dp"
                android:paddingBottom="32dp"
                android:text="@string/riwayat_transaksi"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_bantuan"
        android:layout_width="@dimen/width_card"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/primary"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="@id/card_uang_kas"
        app:layout_constraintTop_toBottomOf="@id/card_uang_kas"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_bantuan"
                android:layout_width="@dimen/width_card"
                android:layout_height="@dimen/height_card"
                android:background="@color/primary"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingTop="32dp"
                android:paddingEnd="16dp"
                android:paddingBottom="32dp"
                android:text="@string/bantuan"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>